fix: Low contrast nav item flagged by Chrome Lighthouse

--- a/blog.css
+++ b/blog.css
@@ -47,17 +47,17 @@ h6, .h6 {
   display: inline-block;
   padding: 10px;
   font-weight: 500;
-  color: rgb(78, 78, 78)
+  color: rgb(0, 0, 0)
 }
 .blog-nav-item:hover,
 .blog-nav-item:focus {
-  color: rgb(78, 78, 78);
+  color: rgb(0, 0, 0);
   text-decoration: none;
 }
 
 /* Active state gets a caret at the bottom */
 .blog-nav .active {
-  color: rgb(78, 78, 78);
+  color: rgb(0, 0, 0);
 }
 .blog-nav .active:after {
   position: absolute;
